# swagger_server/swagger/swagger.yaml
@@ -6,7 +6,7 @@ info:
   title: "POIs API"
   contact:
     email: "jpbjesus@ua.pt"
-host: "poi-api-3aybx4hfgq-ew.a.run.app"
+# host: "poi-api-3aybx4hfgq-ew.a.run.app"
 basePath: "/poi_api/"
 tags:
 - name: "poi"
@@ -217,6 +217,46 @@ paths:
         - "university"
         - "veterinary_care"
         - "zoo"
+        - "administrative_area_level_1"
+        - "administrative_area_level_2"
+        - "administrative_area_level_3"
+        - "administrative_area_level_4"
+        - "administrative_area_level_5"
+        - "archipelago"
+        - "colloquial_area"
+        - "continent"
+        - "country"
+        - "establishment"
+        - "finance"
+        - "floor"
+        - "food"
+        - "general_contractor"
+        - "geocode"
+        - "health"
+        - "intersection"
+        - "locality"
+        - "natural_feature"
+        - "neighborhood"
+        - "place_of_worship"
+        - "point_of_interest"
+        - "political"
+        - "post_box"
+        - "postal_code"
+        - "postal_code_prefix"
+        - "postal_code_suffix"
+        - "postal_town"
+        - "premise"
+        - "room"
+        - "route"
+        - "street_address"
+        - "street_number"
+        - "sublocality"
+        - "sublocality_level_1"
+        - "sublocality_level_2"
+        - "sublocality_level_3"
+        - "sublocality_level_4"
+        - "sublocality_level_5"
+        - "subpremise"
       - name: "lat"
         in: "query"
         description: "geocoded latitude of POI"
@@ -363,8 +403,7 @@ paths:
         in: "path"
         description: "ID of POI to update"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       - name: "upfile1"
         in: "formData"
         description: "Image to upload"
@@ -411,8 +450,7 @@ paths:
         in: "path"
         description: "ID of POI to upload tag"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       - name: "tag"
         in: "formData"
         description: "tag to describe poi"
@@ -439,106 +477,148 @@ definitions:
         type: "string"
         description: "Contains the human-readable name for the returned result. For\
           \ establishment results, this is usually the canonicalized business name."
-      type:
-        type: "string"
-        enum:
-        - "accounting"
-        - "airport"
-        - "amusement_park"
-        - "aquarium"
-        - "art_gallery"
-        - "atm"
-        - "bakery"
-        - "bank"
-        - "bar"
-        - "beauty_salon"
-        - "bicycle_store"
-        - "book_store"
-        - "bowling_alley"
-        - "bus_station"
-        - "cafe"
-        - "campground"
-        - "car_dealer"
-        - "car_rental"
-        - "car_repair"
-        - "car_wash"
-        - "casino"
-        - "cemetery"
-        - "church"
-        - "city_hall"
-        - "clothing_store"
-        - "convenience_store"
-        - "courthouse"
-        - "dentist"
-        - "department_store"
-        - "doctor"
-        - "drugstore"
-        - "electrician"
-        - "electronics_store"
-        - "embassy"
-        - "fire_station"
-        - "florist"
-        - "funeral_home"
-        - "furniture_store"
-        - "gas_station"
-        - "grocery_or_supermarket"
-        - "gym"
-        - "hair_care"
-        - "hardware_store"
-        - "hindu_temple"
-        - "home_goods_store"
-        - "hospital"
-        - "insurance_agency"
-        - "jewelry_store"
-        - "laundry"
-        - "lawyer"
-        - "library"
-        - "light_rail_station"
-        - "liquor_store"
-        - "local_government_office"
-        - "locksmith"
-        - "lodging"
-        - "meal_delivery"
-        - "meal_takeaway"
-        - "mosque"
-        - "movie_rental"
-        - "movie_theater"
-        - "moving_company"
-        - "museum"
-        - "night_club"
-        - "painter"
-        - "park"
-        - "parking"
-        - "pet_store"
-        - "pharmacy"
-        - "physiotherapist"
-        - "plumber"
-        - "police"
-        - "post_office"
-        - "primary_school"
-        - "real_estate_agency"
-        - "restaurant"
-        - "roofing_contractor"
-        - "rv_park"
-        - "school"
-        - "secondary_school"
-        - "shoe_store"
-        - "shopping_mall"
-        - "spa"
-        - "stadium"
-        - "storage"
-        - "store"
-        - "subway_station"
-        - "supermarket"
-        - "synagogue"
-        - "taxi_stand"
-        - "tourist_attraction"
-        - "train_station"
-        - "transit_station"
-        - "travel_agency"
-        - "university"
-        - "veterinary_care"
-        - "zoo"
+      type: 
+        type: "array"
+        items:
+          type: "string"
+          enum:
+            - "accounting"
+            - "airport"
+            - "amusement_park"
+            - "aquarium"
+            - "art_gallery"
+            - "atm"
+            - "bakery"
+            - "bank"
+            - "bar"
+            - "beauty_salon"
+            - "bicycle_store"
+            - "book_store"
+            - "bowling_alley"
+            - "bus_station"
+            - "cafe"
+            - "campground"
+            - "car_dealer"
+            - "car_rental"
+            - "car_repair"
+            - "car_wash"
+            - "casino"
+            - "cemetery"
+            - "church"
+            - "city_hall"
+            - "clothing_store"
+            - "convenience_store"
+            - "courthouse"
+            - "dentist"
+            - "department_store"
+            - "doctor"
+            - "drugstore"
+            - "electrician"
+            - "electronics_store"
+            - "embassy"
+            - "fire_station"
+            - "florist"
+            - "funeral_home"
+            - "furniture_store"
+            - "gas_station"
+            - "grocery_or_supermarket"
+            - "gym"
+            - "hair_care"
+            - "hardware_store"
+            - "hindu_temple"
+            - "home_goods_store"
+            - "hospital"
+            - "insurance_agency"
+            - "jewelry_store"
+            - "laundry"
+            - "lawyer"
+            - "library"
+            - "light_rail_station"
+            - "liquor_store"
+            - "local_government_office"
+            - "locksmith"
+            - "lodging"
+            - "meal_delivery"
+            - "meal_takeaway"
+            - "mosque"
+            - "movie_rental"
+            - "movie_theater"
+            - "moving_company"
+            - "museum"
+            - "night_club"
+            - "painter"
+            - "park"
+            - "parking"
+            - "pet_store"
+            - "pharmacy"
+            - "physiotherapist"
+            - "plumber"
+            - "police"
+            - "post_office"
+            - "primary_school"
+            - "real_estate_agency"
+            - "restaurant"
+            - "roofing_contractor"
+            - "rv_park"
+            - "school"
+            - "secondary_school"
+            - "shoe_store"
+            - "shopping_mall"
+            - "spa"
+            - "stadium"
+            - "storage"
+            - "store"
+            - "subway_station"
+            - "supermarket"
+            - "synagogue"
+            - "taxi_stand"
+            - "tourist_attraction"
+            - "train_station"
+            - "transit_station"
+            - "travel_agency"
+            - "university"
+            - "veterinary_care"
+            - "zoo"
+            - "administrative_area_level_1"
+            - "administrative_area_level_2"
+            - "administrative_area_level_3"
+            - "administrative_area_level_4"
+            - "administrative_area_level_5"
+            - "archipelago"
+            - "colloquial_area"
+            - "continent"
+            - "country"
+            - "establishment"
+            - "finance"
+            - "floor"
+            - "food"
+            - "general_contractor"
+            - "geocode"
+            - "health"
+            - "intersection"
+            - "locality"
+            - "natural_feature"
+            - "neighborhood"
+            - "place_of_worship"
+            - "point_of_interest"
+            - "political"
+            - "post_box"
+            - "postal_code"
+            - "postal_code_prefix"
+            - "postal_code_suffix"
+            - "postal_town"
+            - "premise"
+            - "room"
+            - "route"
+            - "street_address"
+            - "street_number"
+            - "sublocality"
+            - "sublocality_level_1"
+            - "sublocality_level_2"
+            - "sublocality_level_3"
+            - "sublocality_level_4"
+            - "sublocality_level_5"
+            - "subpremise"
       address:
         type: "string"
         description: "Is a string containing the human-readable address of this place.\
@@ -548,13 +628,6 @@ definitions:
         description: "Contains the places phone number in its local format."
       geocode:
         $ref: "#/definitions/POI_geocode"
-      price_level:
-        type: "integer"
-        format: "int32"
-        description: "The price level of the place, on a scale of 0 to 4. The exact\
-          \ amount indicated by a specific value will vary from region to region.\
-          \ Price levels are interpreted as follows: 0 — Free, 1 — Inexpensive, 2\
-          \ — Moderate, 3 — Expensive, 4 — Very Expensive"
         minimum: 0
         maximum: 4
       opening_hours:
@@ -564,15 +637,15 @@ definitions:
           type: "string"
           minItems: 7
           maxItems: 7
-      rating:
-        type: "number"
-        format: "double"
-        description: "Contains the place's rating, from 1.0 to 5.0, based on aggregated user reviews"
-        maximum: 5.0
       website:
         type: "string"
         description: "Lists the authoritative website for this place, such as a business\
           \ homepage."
+      photos:
+        type: "array"
+        description: ""
+        items: 
+          type: "string"
   ApiResponse:
     type: "object"
     properties:
